--- a/static/index.html
+++ b/static/index.html
@@ -12,17 +12,15 @@
     />
     <script src="./plugins/babel-polyfill/polyfill.min.js"></script>
     <script src="//unpkg.com/vue"></script>
+    <script src="//unpkg.com/vue-router@3.1.3/dist/vue-router.js"></script>
     <script src="./plugins/httpVueLoader.js"></script>
-    <title>图书OPAC检索</title>
+    <title>vue-html-project</title>
   </head>
   <body>
     <div id="app">
       <ly-head></ly-head>
       <div class="content">
-        <div v-if="hasError">
-          <error-page/>         
-        </div>
-        <ly-home v-else/>
+        <router-view></router-view>
       </div>
     </div>
   </body>
@@ -31,5 +29,6 @@
   <script src="//unpkg.com/axios/dist/axios.min.js"></script>
   <script src="./config.default.js"></script>
   <script src="./utils/http.js"></script>
+  <script src="./routers/index.js"></script>
   <script src="./index.js"></script>
 </html>
